tests/ui/type-alias-impl-trait/nested.stderr
error[E0277]: `Bar` doesn't implement `Debug`
  --> $DIR/nested.rs:15:22
   |
LL |     println!("{:?}", bar());
   |     -----------------^^^^^-
   |     |                |
   |     |                `Bar` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |     in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)
   |
   = help: the trait `Debug` is not implemented for `Bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
